--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <html lang="pt-BR">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <title>artes</title>
 </head>
+
 <body>
 
 
- <header>Formas de aprender artes</header>
- <section>
-<div>
-<h1>Aulas de artes</h1>
-<p>#artes</p>
-</div>
+    <header>Formas de aprender artes</header>
+    <section>
+        <div class= "chamada-texto"> 
+            <h1>Aulas de artes</h1>
+            <p>#artes</p>
+        </div>
 
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NW4z_db_2AI?si=fZwV38fmNNqZlmkQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NW4z_db_2AI?si=fZwV38fmNNqZlmkQ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
 
-</section>
+    </section>
 </body>
+
 </html>
