adicionei novos vídeos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html lang="pt-BR">
-
 <head>
     <link rel="stylesheet" href="style.css">
     <title>artes</title>
@@ -22,6 +21,14 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
+    </section>
+    <section>
+        <h2>outras sujestões de vídeos</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
+                <img src="https://img.youtube.com/vi/yhNtNZH_i14/maxresdefault.jpg"/>
+            </a>
+        </div>
     </section>
 </body>
 
