--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
                 <img src="https://img.youtube.com/vi/yhNtNZH_i14/maxresdefault.jpg"/>
             </a>
+            <a href="https://www.youtube.com/watch?v=gRgtW4RKMDg">
+                <img src="https://img.youtube.com/vi/gRgtW4RKMDg/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=WSoTmWM-wTk">
+                <img src="https://img.youtube.com/vi/WSoTmWM-wTk/maxresdefault.jpg"/>
+            </a>
         </div>
     </section>
 </body>
