--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html lang="pt-BR">
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Momo+Signature&display=swap" rel="stylesheet" <link
+        rel="stylesheet" href="style.css">
     <title>artes</title>
 </head>
 
@@ -9,7 +13,7 @@
 
     <header>Formas de aprender artes</header>
     <section>
-        <div class= "chamada-texto"> 
+        <div class="chamada-texto">
             <h1>Aulas de artes</h1>
             <p>#artes</p>
         </div>
@@ -26,13 +30,13 @@
         <h2>outras sujestões de vídeos</h2>
         <div>
             <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
-                <img src="https://img.youtube.com/vi/yhNtNZH_i14/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/yhNtNZH_i14/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=gRgtW4RKMDg">
-                <img src="https://img.youtube.com/vi/gRgtW4RKMDg/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/gRgtW4RKMDg/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=WSoTmWM-wTk">
-                <img src="https://img.youtube.com/vi/WSoTmWM-wTk/maxresdefault.jpg"/>
+                <img src="https://img.youtube.com/vi/WSoTmWM-wTk/maxresdefault.jpg" />
             </a>
         </div>
     </section>
