--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section>
         <h2>outras sujestões de vídeos</h2>
-        <div>
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
                 <img src="https://img.youtube.com/vi/yhNtNZH_i14/maxresdefault.jpg" />
             </a>
