--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <header>Formas de aprender artes</header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>Aulas de artes</h1>
             <p>#artes</p>
@@ -26,7 +26,7 @@
         </div>
 
     </section>
-    <section>
+    <section class="categoria> class="categoria
         <h2>outras sujestões de vídeos</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
