--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
     </section>
-    <section class="categoria> class= categoria"
+    <section class="categoria"> 
         <h2>outras sujestões de vídeos</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=yhNtNZH_i14">
